--- a/views/register.pug
+++ b/views/register.pug
@@ -1,9 +1,3 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Register Page
-    body 
-        h1 Register
+extends layout.pug
+block content
+    h1 Register
