--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,11 +1,17 @@
 html
   head
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title อาสาช่วย
     block css 
-        link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css")
+    link(rel="stylesheet", href="/css/jquery.sweet-modal.min.css")
+    link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap")
+    link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css")
+    link(rel="stylesheet", href="/css/style.css")
+    script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js") 
+    script(src="https://code.jquery.com/jquery-3.6.0.slim.js")
+    script(src="/js/jquery.sweet-modal.min.js")
+    script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js") 
     block scripts
-        script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js") 
-
-  body
+  body.kanit
     block content
     block foot
