--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,8 @@ html
     link(rel="stylesheet", href="/css/style.css")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js") 
     script(src="https://code.jquery.com/jquery-3.6.0.slim.js")
-    script(src="/js/jquery.sweet-modal.min.js")
+    //- script(src="/js/jquery.sweet-modal.min.js")
+    script(src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.20/dist/sweetalert2.all.min.js") 
     script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js") 
     block scripts
   body.kanit
