+ Update use hex instead of base64

--- a/views/register.pug
+++ b/views/register.pug
@@ -33,6 +33,8 @@ block content
                                         option(select=p )= p
                             .d-grid.gap-2 
                                 button.btn.btn-block.c-orange.text-white(type='button')#confirmBtn ยืนยันข้อมูล
+                            input#uri(type="text", value=uri hidden) 
+                            
             
 block scripts 
     script(src="/js/confirm.js") 
