+ Update favicon & title of layout page

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,8 @@
 html
   head
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    title อาสาช่วย
+    title อาสาพร้อม
+    link(rel="shortcut icon", href="/images/lg1.png", type="image/x-icon")
     block css 
     link(rel="stylesheet", href="/css/jquery.sweet-modal.min.css")
     link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap")
