--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,15 +4,11 @@ html
     title อาสาพร้อม
     link(rel="shortcut icon", href="/images/lg1.png", type="image/x-icon")
     block css 
-    link(rel="stylesheet", href="/css/jquery.sweet-modal.min.css")
     link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap")
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css")
     link(rel="stylesheet", href="/css/style.css")
+    block scr
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js") 
-    script(src="https://code.jquery.com/jquery-3.6.0.slim.js")
-    //- script(src="/js/jquery.sweet-modal.min.js")
-    script(src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.20/dist/sweetalert2.all.min.js") 
-    script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js") 
     block scripts
   body.kanit
     block content
