+ Update Add Validate Province name , Prepare for delete volunteer function

--- a/views/search.pug
+++ b/views/search.pug
@@ -1,4 +1,6 @@
 extends layout.pug
+block scr
+    script(src="https://code.jquery.com/jquery-3.6.0.slim.js")
 block content
     .container.p-3
         .row 
@@ -18,11 +20,23 @@ block content
                                     each p in provinces
                                         option(value=p )= p
                             .d-grid.gap-2 
-                                button.btn-sm.btn.btn-block.c-orange.text-white(type='submit')#confirmBtn ค้นหาตามจังหวัด
+                                button.btn-sm.btn.btn-block.c-orange.text-white(type='submit' disabled)#confirmBtn ค้นหาตามจังหวัด
                 .card.shadow-sm.rounded.mt-1
                     .card-body
                         h5.text-center อาสาสมัครทั้งหมด
                         .d-grid.gap-2 
                             a.btn-sm.btn.btn-block.c-orange.text-white(href="./allvolunteers") อาสาสมัครทั้งหมด
-
 block scripts
+    script.
+        $().ready(()=>{
+            $("#provinces").change(()=>{
+                let provinces = "#{provinces}".split(",");
+                let inputProvince = $("#provinces").val();
+                let founded = provinces.find(e=>e==inputProvince);
+                if(founded){
+                    $("#confirmBtn").prop('disabled',false);
+                }else{
+                     $("#confirmBtn").prop('disabled',true);
+                }
+            })
+        })
