--- a/views/search.pug
+++ b/views/search.pug
@@ -23,6 +23,11 @@ block content
                                 button.btn-sm.btn.btn-block.c-orange.text-white(type='submit' disabled)#confirmBtn ค้นหาตามจังหวัด
                 .card.shadow-sm.rounded.mt-1
                     .card-body
+                        h5.text-center ข้อมูลจากแหล่งข้อมูลภายนอก
+                        .d-grid.gap-2 
+                            a.btn-sm.btn.btn-block.c-orange.text-white(href="./other_resource") ข้อมูลจากแหล่งข้อมูลภายนอกทั้งหมด
+                .card.shadow-sm.rounded.mt-1
+                    .card-body
                         h5.text-center อาสาสมัครทั้งหมด
                         .d-grid.gap-2 
                             a.btn-sm.btn.btn-block.c-orange.text-white(href="./allvolunteers") อาสาสมัครทั้งหมด
