--- a/views/result.pug
+++ b/views/result.pug
@@ -31,7 +31,7 @@ block content
                                     small 
                                         | ชื่อ : 
                                         = data.name
-                                br
+                                    br
                                 if data.address 
                                     small
                                         | ที่อยู่ : 
@@ -40,20 +40,17 @@ block content
                                 if data.phone
                                     small
                                         | เบอร์โทรศัพท์ : 
-                                        each p in data.phone 
+                                        each p,index in data.phone 
                                             a(href="tel:"+p)= p
-                                            span ,&nbsp;
+                                            if index < data.phone.length-1
+                                                span , &nbsp;
                                     br
                                 if data.note
                                     small
                                         | หมายเหตุ : 
                                         = data.note
                                     br
-                                if data.province
-                                    small
-                                        | จังหวัด : 
-                                        = data.province
-                                    br
+                                
                                 if data.url 
                                     small 
                                         span อื่นๆ :
@@ -64,6 +61,11 @@ block content
                                                         = u.platform  
                                                         |  : 
                                                         a(href=u.url, target="_blank")= u.label
+                                    br
+                                if data.province
+                                    small
+                                        | จังหวัด : 
+                                        = data.province
                                     br
                 .col-12.d-flex.justify-content-center.mt-1 
                     nav(aria-label='Page navigation example')
